--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 ---
 layout: home
 title: PrintableOptics
-subtitle: Two photon polymerization is awesome
+subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize micro-optics
 ---
+
+![Alt Text](/assets/gif/TPP.gif)
+
+
