--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: PrintableOptics
 subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize micro-optics
 ---
 
-![Alt Text](/assets/gif/TPP.gif)
+<img src="/assets/gif/TPP.gif" alt="description of gif" /> 
+
 
 
