--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: PrintableOptics
 subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize micro-optics
 ---
 
-<img src="/assets/gif/TPP.gif" alt="description of gif" /> 
+<img src="https://github.com/tingtsai/PrintableOptics/assets/gif/TPP.gif" alt="description of gif" /> 
 
 
 
