--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@ title: PrintableOptics
 subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize micro-optics
 ---
 
-<img src="/assets/gif/TPP.gif" alt="description of gif" /> 
 
 
+<HTML>
+<HEAD> <TITLE>Activity - Insert animated GIF to HTML</TITLE> </HEAD>
+<BODY>
+  <img src="/assets/gif/TPP.gif" alt="description of gif" /> 
+</BODY>
+</HTML>
 
