--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: page
 title: PrintableOptics
 subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize micro-optics
+<img src="/assets/gif/TPP.gif" alt="description of gif" /> 
 ---
 
 
