--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 layout: page
 title: PrintableOptics
 subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize micro-optics
-<img src="/assets/gif/TPP.gif" alt="description of gif" /> 
+
 ---
 
+<html>
+<body>
 
+<h2>Animated Images</h2>
+
+<p>HTML allows moving images:</p>
+
+<img src="/assets/gif/TPP.gif" alt="description of gif" /> 
+
+</body>
+</html>
 
 
