--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
 ---
 
 
-<h2>Animated Images</h2>
+<h2>Project Descriptions</h2>
 
-<p>HTML allows moving images:</p>
+<p>Some descriptions here</p>
 
-<img src="/assets/gif/TPP.gif" alt="description of gif" /> 
+<img src="/assets/img/stanford.png"> 
 
 
 
