--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
 
 <p>Some descriptions here</p>
 
-<img src="/assets/img/stanford.png"> 
-
+<img src="assests/img/stanford.png" alt="hi" class="inline"/>
 
 
 
