--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
 
 <p>Some descriptions here</p>
 
-<img src="/assests/img/stanford.png" alt="hi" class="inline"/>
-
+<figure>
+  <img src="/assests/img/stanford.png" alt="hi" class="inline"/>
+  <br/>
+</figure>
 
 
