--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
 <p>Some descriptions here</p>
 
 <figure>
-  <img src="/assests/img/stanford.png" alt="hi" class="inline"/>
+  <img src="/assets/img/stanford.png" />
   <br/>
 </figure>
 
