--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
 <p>Some descriptions here</p>
 
 <figure>
-  <img src="https://tingtsai.github.com/PrintableOptics/assets/img/stanford.png" id="tingtsai" alt="stanford-gif" />
+  <img src="assets/img/stanford.png"/>
   <br/>
 </figure>
 
