--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
 
 <figure>
   <img src="assets/img/stanford.png"/>
+  <img src="https://github.com/tingtsai/PrintableOptics/blob/e03c4176aa0cedf180e35fcd8d3f73a728b78c78/assets/img/stanford.png"/>
   <br/>
 </figure>
 
