--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
 
 <p>Some descriptions here</p>
 
-<figure>
+<!-- <figure>
  <img src="https://github.com/tingtsai/PrintableOptics/blob/3400d89d77fab1d4ec0f8280b56eef14d0f22552/assets/gif/TPP.gif"/>
  <br/>
-</figure>
+</figure> -->
 <figure>
  <img src="https://github.com/tingtsai/PrintableOptics/blob/68b7de63cbef6912dcd03008588b5685a6e2cb1b/assets/img/stanford.png"/>
+ <br/>
 </figure>
 
  
