--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
  <br/>
 </figure> -->
 <figure>
- <img src="https://github.com/tingtsai/PrintableOptics/blob/68b7de63cbef6912dcd03008588b5685a6e2cb1b/assets/img/stanford.png"/>
+ <img src="https://github.com/tingtsai/PrintableOptics/blob/e03c4176aa0cedf180e35fcd8d3f73a728b78c78/assets/img/stanford.png" alt ="stanford"/>
  <br/>
 </figure>
 
