--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
 ---
 
 
-<h2>Hi3</h2>
+<h2>Hi4</h2>
 
 <p>Some descriptions here</p>
 
 <figure>
 <!--    <img src="assets/img/stanford.png"/> -->
-   <img src="https://github.com/tingtsai/PrintableOptics/blob/e03c4176aa0cedf180e35fcd8d3f73a728b78c78/assets/img/stanford.pn"/>
+   <img src="https://github.com/tingtsai/PrintableOptics/blob/e03c4176aa0cedf180e35fcd8d3f73a728b78c78/assets/img/stanford.png"/>
    <br/>
  </figure>
 
