--- a/index.html
+++ b/index.html
@@ -11,18 +11,9 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
 <p>Some descriptions here</p>
 
 <figure>
-   <img src="assets/img/stanford.png"/>
-<!--    <img src="https://github.com/tingtsai/PrintableOptics/blob/e03c4176aa0cedf180e35fcd8d3f73a728b78c78/assets/img/stanford.png"/> -->
+<!--    <img src="assets/img/stanford.png"/> -->
+   <img src="assets/gif/TPP.gif"/>
    <br/>
  </figure>
 
-<!-- <figure>
- <img src="https://github.com/tingtsai/PrintableOptics/blob/3400d89d77fab1d4ec0f8280b56eef14d0f22552/assets/gif/TPP.gif"/>
- <br/>
-</figure> -->
-<!-- <figure>
- <img src="https://github.com/tingtsai/PrintableOptics/blob/e03c4176aa0cedf180e35fcd8d3f73a728b78c78/assets/img/stanford.png" alt ="stanford"/>
- <br/>
-</figure> -->
 
- 
