--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
 <figure>
 <!--    <img src="assets/img/stanford.png"/> -->
    <img src="assets/gif/TPP.gif"/>
+   <figcaption>
+      Illustration of 3D laser nanoprinting (Source: 3DMM2O, Patrick Müller)
+      </figcaption>
    <br/>
  </figure>
 
