--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
 ---
 
 
-<h2>Two-photon polymerization</h2>
+<h2>Project descriptions</h2>
 
-<p>The two-photon polymerization (2PP) technique is based on the interaction of highly localized femtosecond laser radiation with photosensitive material to engineer high fidelity structure with resolution down to 100 nm.</p>
+<p>TThe two-photon polymerization (2PP) technique is based on the interaction of highly localized femtosecond laser radiation with photosensitive material to engineer high fidelity structure with resolution down to 100 nm. 
+   Two-photon polymerization is not only cost-effective but also with high resolution and good 3-D structural controllability. 
+   Using the Nanoscribe Photonics GT system, we launched a project focusing on miniaturizing micro-optics printing at Stanford.
+   The ultimate goal of this study is to produce a cost-effective endoscope engineering for neuroscience applications. 
+   As a benchmark, this project showcases the two-photon laser printing of microlens, which is a crucial component for endoscope engineering. </p>
 
 <figure>
    <img src="assets/gif/TPP.gif"/>
@@ -18,4 +22,6 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
    <br/>
  </figure>
 
+
+<p>  </p>
 
