--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
 
 <h2>Project descriptions</h2>
 
-<p>The two-photon polymerization (TPP) technique is based on the interaction of highly localized femtosecond laser radiation with photosensitive material to engineer high fidelity structure with resolution down to 100 nm. 
-   Two-photon polymerization is not only cost-effective but also with high resolution and good 3-D structural controllability. 
+<p>Two-photon polymerization (TPP) is a technique to engineer high fidelity 3D structure with resolution down to 100 nm.
+   Based on the interaction of highly localized femtosecond laser radiation with photosensitive material, TPP has become a cost-effective, high resolution, and good 3-D micro/nanoprinting strategy. 
    Using the Nanoscribe Photonics GT system, we launched a project focusing on miniaturizing micro-optics printing at Stanford.
    The ultimate goal of this study is to produce a cost-effective endoscope engineering for neuroscience applications. 
    As a benchmark of engineering endoscope, this project showcases the microlens fabrication and identify chanllenges and propose corresponding solutions. 
