--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
 
 <p>Two-photon polymerization (TPP) is a technique to engineer high fidelity 3D structure with resolution down to 100 nm.
    Based on the interaction of highly localized femtosecond laser radiation with photosensitive material, TPP has become a cost-effective, high resolution, and good 3-D micro/nanoprinting strategy. 
-   Using the Nanoscribe Photonics GT system, we launched a project focusing on miniaturizing micro-optics printing at Stanford.
+   Using the Nanoscribe Photonics GT system, we launched a project focusing on <a href="https://tingtsai.github.io/PrintableOptics/md/Motivation">miniaturizing micro-optics printing</a> at Stanford.
    The ultimate goal of this study is to produce a cost-effective endoscope engineering for neuroscience applications. 
    As a benchmark of engineering endoscope, this project showcases the microlens fabrication and identify chanllenges and propose corresponding solutions. 
    We demonstrate a the process flow from design, manufacturing, characterizations, post-processing, and functionalities.
