--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@ title: PrintableOptics
 subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize micro-optics
 
 ---
-
+<iframe width="420" height="315"
+src="https://www.youtube.com/watch?v=IDRuzhhhnuk">
+</iframe>
 
 <h2>Project descriptions</h2>
 
