--- a/index.html
+++ b/index.html
@@ -5,13 +5,8 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
 
 ---
 
-<h2>Project descriptions</h2>
-<iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=IDRuzhhhnuk">
-</iframe>
 
-
-
+<iframe width="560" height="315" src="https://www.youtube.com/watch?v=IDRuzhhhnuk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 
 
