--- a/index.html
+++ b/index.html
@@ -6,19 +6,15 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
 ---
 <h2>Project descriptions</h2>
 
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=IDRuzhhhnuk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-
-
-
-
-
-
-
-
-
-
-
+<div class="embed-container">
+  <iframe
+      src="https://www.youtube.com/watch?v=IDRuzhhhnuk"
+      width="700"
+      height="480"
+      frameborder="0"
+      allowfullscreen="">
+  </iframe>
+</div>
 
 
 
