--- a/index.html
+++ b/index.html
@@ -6,15 +6,9 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
 ---
 <h2>Project descriptions</h2>
 
-<div class="embed-container">
-  <iframe
-      src="https://www.youtube.com/watch?v=IDRuzhhhnuk"
-      width="700"
-      height="480"
-      frameborder="0"
-      allowfullscreen="">
-  </iframe>
-</div>
+<iframe width="420" height="315"
+src="https://www.youtube.com/watch?v=IDRuzhhhnuk">
+</iframe>
 
 
 
