--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: PrintableOptics
 subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize micro-optics
 
 ---
-<h2>Project descriptions</h2>
+<h2><a href="https://www.youtube.com/watch?v=IDRuzhhhnuk">Project descriptions</a> </h2>
 
 
 <p>Two-photon polymerization (TPP) is a technique to engineer high fidelity 3D structure with resolution down to 100 nm.
