--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@ title: PrintableOptics
 subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize micro-optics
 
 ---
-<h2><a href="https://www.youtube.com/watch?v=IDRuzhhhnuk">Project descriptions</a> </h2>
-
+<h2>Project descriptions</h2>
 
 <p>Two-photon polymerization (TPP) is a technique to engineer high fidelity 3D structure with resolution down to 100 nm.
    Based on the interaction of highly localized femtosecond laser radiation with photosensitive material, TPP has become a cost-effective, high resolution, and good 3-D micro/nanoprinting strategy. 
@@ -16,6 +15,8 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
    This project aims to establish a useful and robust workflow for micro-optics fabrication to benefit photonics and micro/nano-fabrication community.
     </p>
 
+<h2><a href="https://www.youtube.com/watch?v=IDRuzhhhnuk">project description video</a> </h2>
+
 <figure>
    <img src="assets/gif/TPP.gif"/>
    <figcaption>
@@ -24,7 +25,4 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
    <br/>
  </figure>
 
-
-
- </body>
-</html> 
+ 
