--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
    This project aims to establish a useful and robust workflow for micro-optics fabrication to benefit photonics and micro/nano-fabrication community.
     </p>
 
-<h2><a href="https://www.youtube.com/watch?v=IDRuzhhhnuk">project description video</a> </h2>
+
 
 <figure>
    <img src="assets/gif/TPP.gif"/>
@@ -25,4 +25,4 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
    <br/>
  </figure>
 
- 
+ <a href="https://www.youtube.com/watch?v=IDRuzhhhnuk">project description video</a> 
