--- a/index.html
+++ b/index.html
@@ -25,4 +25,4 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
    <br/>
  </figure>
 
- <a href="https://www.youtube.com/watch?v=IDRuzhhhnuk">project description video</a> 
+ <a href="https://www.youtube.com/watch?v=IDRuzhhhnuk">Project Descriptions Video</a> 
