--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
    Using the Nanoscribe Photonics GT system, we launched a project focusing on <a href="https://tingtsai.github.io/PrintableOptics/Introduction">miniaturizing micro-optics printing</a> at Stanford.
    The ultimate goal of this study is to produce a cost-effective endoscope engineering for neuroscience applications. 
    As a benchmark of engineering endoscope, this project showcases the microlens fabrication and identify chanllenges and propose corresponding solutions. 
-   We demonstrate a the process flow from design, manufacturing, characterizations, post-processing, and functionalities.
-   This project aims to establish a useful and robust workflow for micro-optics fabrication to benefit photonics and micro/nano-fabrication community.
+   We demonstrate a the process flow from <a href="https://tingtsai.github.io/PrintableOptics/File/">design</a>, <a href="https://tingtsai.github.io/PrintableOptics/Conditions/">manufacturing</a>, <a href="https://tingtsai.github.io/PrintableOptics/Characterizations/">characterizations</a>, <a href="https://tingtsai.github.io/PrintableOptics/Post-processing/">post-processing</a>, and <a href="https://tingtsai.github.io/PrintableOptics/functionalities/">functionalities</a>.
+   This project aims to establish a useful and <a href="https://tingtsai.github.io/PrintableOptics/Process/">robust workflow</a> for micro-optics fabrication to benefit photonics and micro/nano-fabrication community.
     </p>
+
+
+
 
 
 
@@ -25,4 +28,4 @@ subtitle: A speedy, cost-effective, and flexible way to engineer miniaturize mic
    <br/>
  </figure>
 
- <a href="https://www.youtube.com/watch?v=IDRuzhhhnuk">Project Descriptions Video</a> 
+
